--- a/obm.html
+++ b/obm.html
@@ -52,36 +52,33 @@
               padding: 4px 8px;
               border-radius: 8px;
             "
-            href="aboutus.html"
+            href="#"
             >About us &nbsp;<i class="fa-solid fa-chevron-down"></i
           ></a>
           <ul class="sub-menu">
             <li>
               <a href="portfolio.html"
-                ><p>Portfolio</p>
+                ><p>Portfolio</p></a>
                 <br />
-                <p class="small-p">Want result like this?</p></a
-              >
+                <p class="small-p">Want result like this?</p>
             </li>
             <li>
               <a href="aboutus.html"
-                ><p>About us</p>
+                ><p>About us</p></a>
                 <br />
-                <p class="small-p">Learn More about us</p></a
-              >
+                <p class="small-p">Learn More about us</p>
             </li>
             <li>
               <a href="category.html"
-                ><p>Industries</p>
+                ><p>Industries</p></a>
                 <br />
-                <p class="small-p">Expertise Spanning Sectors</p></a
-              >
+                <p class="small-p">Expertise Spanning Sectors</p>
             </li>
           </ul>
         </div>
 
         <div class="services-nav">
-          <a href="services.html"
+          <a href="#"
             >Services &nbsp;<i class="fa-solid fa-chevron-down"></i
           ></a>
           <div class="horizontal">
@@ -100,17 +97,14 @@
             <div>
               <ul class="sub-menu-s">
                 <li>
-                  <a href="#"
-                    ><p>By Skill</p>
+                  <a href=“services.html”
+                    ><p>Marketing Automation</p></a>
                     <br />
-                    <p class="small-p">Graphic Design</p>
+                    <p class="small-p">CRM Management</p>
                     <br />
-                    <p class="small-p">Video Editing</p>
+                    <p class="small-p">Software Integration</p>
                     <br />
-                    <p class="small-p">Website Development</p>
-                    <br />
-                    <p class="small-p">Marketing Automation</p>
-                  </a>
+                    <p class="small-p">Sales Funnel and Pipelines</p>
                 </li>
               </ul>
             </div>
@@ -321,7 +315,7 @@
           <a href="customer.html">
             <p id="foot-p">Customer Stories</p>
           </a>
-          <a href="contactus.html">
+          <a href="#">
             <p id="foot-p">Contact Us</p>
           </a>
         </div>
