--- a/services.html
+++ b/services.html
@@ -54,30 +54,27 @@
       <div class="nav">
         <a href="index.html">Home </a>
         <div class="about-nav">
-          <a href="aboutus.html"
+          <a href="#"
             >About us &nbsp;<i class="fa-solid fa-chevron-down"></i
           ></a>
           <ul class="sub-menu">
             <li>
               <a href="portfolio.html"
-                ><p>Portfolio</p>
+                ><p>Portfolio</p></a>
                 <br />
-                <p class="small-p">Want result like this?</p></a
-              >
+                <p class="small-p">Want result like this?</p>
             </li>
             <li>
               <a href="aboutus.html"
-                ><p>About us</p>
+                ><p>About us</p></a>
                 <br />
-                <p class="small-p">Learn More about us</p></a
-              >
+                <p class="small-p">Learn More about us</p>
             </li>
             <li>
               <a href="category.html"
-                ><p>Industries</p>
+                ><p>Industries</p></a>
                 <br />
-                <p class="small-p">Expertise Spanning Sectors</p></a
-              >
+                <p class="small-p">Expertise Spanning Sectors</p>
             </li>
           </ul>
         </div>
@@ -90,7 +87,7 @@
               padding: 4px 8px;
               border-radius: 8px;
             "
-            href="services.html"
+            href="#"
             >Services &nbsp;<i class="fa-solid fa-chevron-down"></i
           ></a>
           <div class="horizontal">
@@ -109,17 +106,14 @@
             <div>
               <ul class="sub-menu-s">
                 <li>
-                  <a href="#"
-                    ><p>By Skill</p>
+                  <a href=“services.html”
+                    ><p>Marketing Automation</p></a>
                     <br />
-                    <p class="small-p">Graphic Design</p>
+                    <p class="small-p">CRM Management</p>
                     <br />
-                    <p class="small-p">Video Editing</p>
+                    <p class="small-p">Software Integration</p>
                     <br />
-                    <p class="small-p">Website Development</p>
-                    <br />
-                    <p class="small-p">Marketing Automation</p>
-                  </a>
+                    <p class="small-p">Sales Funnel and Pipelines</p>
                 </li>
               </ul>
             </div>
@@ -265,7 +259,7 @@
         </div>
       </div>
 
-      <div class="ad">
+      <div class="ad" id="ad-2">
         <div class="scroll-2">
           <img src="images/service-black-2.png" alt="" />
         </div>
@@ -352,7 +346,7 @@
         <div class="text"><p>Testimonial</p></div>
         <h3>What People Say <span>About Us</span></h3>
         <h4>
-          Discover what our satisfied customers want to say about their <br />
+          Discover what our satisfied customers want to say about their
           experience with our service
         </h4>
       </div>
@@ -536,7 +530,7 @@
           <a href="customer.html">
             <p id="foot-p">Customer Stories</p>
           </a>
-          <a href="contactus.html">
+          <a href="#">
             <p id="foot-p">Contact Us</p>
           </a>
         </div>
