--- a/index.html
+++ b/index.html
@@ -63,36 +63,31 @@
           >Home
         </a>
         <div class="about-nav">
-          <a href="aboutus.html"
-            >About us &nbsp;<i class="fa-solid fa-chevron-down"></i
-          ></a>
+          <a href="#">About us &nbsp;<i class="fa-solid fa-chevron-down"></i></a>
           <ul class="sub-menu">
             <li>
               <a href="portfolio.html"
-                ><p>Portfolio</p>
+                ><p>Portfolio</p></a>
                 <br />
-                <p class="small-p">Want result like this?</p></a
-              >
+                <p class="small-p">Want result like this?</p>
             </li>
             <li>
               <a href="aboutus.html"
-                ><p>About us</p>
+                ><p>About us</p></a>
                 <br />
-                <p class="small-p">Learn More about us</p></a
-              >
+                <p class="small-p">Learn More about us</p>
             </li>
             <li>
               <a href="category.html"
-                ><p>Industries</p>
+                ><p>Industries</p></a>
                 <br />
-                <p class="small-p">Expertise Spanning Sectors</p></a
-              >
+                <p class="small-p">Expertise Spanning Sectors</p>
             </li>
           </ul>
         </div>
 
         <div class="services-nav">
-          <a href="services.html"
+          <a href="#"
             >Services &nbsp;<i class="fa-solid fa-chevron-down"></i
           ></a>
           <div class="horizontal">
@@ -111,17 +106,15 @@
             <div>
               <ul class="sub-menu-s">
                 <li>
-                  <a href="#"
-                    ><p>By Skill</p>
+                  <a href="services.html"
+                    ><p>Marketing Automation</p></a>
                     <br />
-                    <p class="small-p">Graphic Design</p>
+                    <p class="small-p">CRM Management</p>
                     <br />
-                    <p class="small-p">Video Editing</p>
+                    <p class="small-p">Software Integration</p>
                     <br />
-                    <p class="small-p">Website Development</p>
-                    <br />
-                    <p class="small-p">Marketing Automation</p>
-                  </a>
+                    <p class="small-p">Sales Funnel and Pipelines</p>
+                  
                 </li>
               </ul>
             </div>
@@ -464,7 +457,7 @@
     <div class="testimonial">
       <div>
         <div class="text"><p>Testimonial</p></div>
-        <h3>What People Say<span>About Us</span></h3>
+        <h3>What People Say <span>About Us</span></h3>
         <h4>
           Discover what our satisfied customers want to say about their
           experience with our service
@@ -608,7 +601,7 @@
           ><div class="cta-m"><p>Book a call</p></div></a
         >
         <a href="#"
-          ><div class="cta-s"><p>Explore our offerings</p></div></a
+          ><div class="cta-s"><p>Get a Demo</p></div></a
         >
       </div>
       <div class="bg"><img src="images/background_wave.png" alt="" /></div>
@@ -639,7 +632,7 @@
           <a href="customer.html">
             <p id="foot-p">Customer Stories</p>
           </a>
-          <a href="contactus.html">
+          <a href="#">
             <p id="foot-p">Contact Us</p>
           </a>
         </div>
