--- a/aboutus.html
+++ b/aboutus.html
@@ -68,19 +68,13 @@
             <li>
               <a href="portfolio.html"
                 ><p>Portfolio</p></a>
-                <br />
-                <p class="small-p">Want result like this?</p>
             </li>
             <li>
               <a href="aboutus.html"
                 ><p>About us</p></a>
-                <br />
-                <p class="small-p">Learn More about us</p>
             </li>
             <li>
               <a href="category.html"><p>Industries</p></a>
-                <br />
-                <p class="small-p">Expertise Spanning Sectors</p>
             </li>
           </ul>
         </div>
@@ -367,24 +361,22 @@
           <h4 id="foot-h">Why Us?</h4>
           <p id="foot-p">Why Our Company</p>
           <a href="obm.html">
-            <p id="foot-p">Our Company vs Online Business Manager</p>
+            <p id="foot-p">Our Company vs <br>Online Business Manager</p>
           </a>
           <a href="customer.html">
             <p id="foot-p">Customer Stories</p>
-          </a>
-          <a href="#">
-            <p id="foot-p">Contact Us</p>
           </a>
         </div>
         <div class="hideMob">
           <h4 id="foot-h">Resources</h4>
           <p id="foot-p">Book A Call</p>
           <p id="foot-p">Watch Demo</p>
-          <p id="foot-p">Design Portfolio</p>
+          <a href="portfolio.html">
+            <p id="foot-p">Portfolio</p>
+          </a>
           <a href="platform.html">
             <p id="foot-p">Supported Platforms</p>
           </a>
-          <p id="foot-p">Blogs</p>
         </div>
       </div>
 
