--- a/customer.html
+++ b/customer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Customer Stories</title>
-    <link rel="icon" type="image/x-icon" href="/images/Favicon - Nusanse.svg">
+    <link rel="icon" type="image/x-icon" href="/images/Favicon - Nusanse.svg" />
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,49 +29,55 @@
     />
     <!-- stylesheet  -->
     <link rel="stylesheet" href="customer.css" />
+    <link rel="stylesheet" href="navbar.css" />
   </head>
   <body>
-    <div class="navbar">
-      <div class="logo">
-        <img src="images/logo - Nusanse.svg" alt="" height="32px" width="155px" />
-      </div>
+    <!-- navbar  -->
+    <div>
+      <div class="containerWrp">
+        <div class="navbar">
+          <div class="logo">
+            <img
+              src="images/logo - Nusanse.svg"
+              alt=""
+              height="32px"
+              width="155px"
+            />
+          </div>
 
-      <div class="hamburger-menu">
-        <div class="hamburger"></div>
-      </div>
+          <div class="hamburger-menu">
+            <div class="hamburger"></div>
+          </div>
 
-      <div class="nav">
-        <a href="index.html">Home </a>
-        <div class="about-nav">
-          <a href="#">About us &nbsp;<i class="fa-solid fa-chevron-down"></i></a>
-          <ul class="sub-menu">
-            <li>
-              <a href="portfolio.html"
-                ><p>Portfolio</p></a>
-                <br />
-                <p class="small-p">Want result like this?</p>
-            </li>
-            <li>
-              <a href="aboutus.html"
-                ><p>About us</p></a>
-                <br />
-                <p class="small-p">Learn More about us</p>
-            </li>
-            <li>
-              <a href="category.html"
-                ><p>Industries</p></a>
-                <br />
-                <p class="small-p">Expertise Spanning Sectors</p>
-            </li>
-          </ul>
-        </div>
+          <div class="nav">
+            <a
+              href="index.html"
+              class="active"
+              >Home
+            </a>
+            <div class="about-nav hasSubMenu">
+              <a href="#"
+                >About us &nbsp;<i class="fa-solid fa-chevron-down"></i
+              ></a>
+              <ul class="sub-menu">
+                <li>
+                  <a href="portfolio.html"><p>Portfolio</p></a>
+                </li>
+                <li>
+                  <a href="aboutus.html"><p>About us</p></a>
+                </li>
+                <li>
+                  <a href="category.html"><p>Industries</p></a>
+                </li>
+              </ul>
+            </div>
 
-        <div class="services-nav">
-          <a href="#"
-            >Services &nbsp;<i class="fa-solid fa-chevron-down"></i
-          ></a>
-          <div class="horizontal">
-            <!-- <div>
+            <div class="services-nav hasSubMenu">
+              <a href="#"
+                >Services &nbsp;<i class="fa-solid fa-chevron-down"></i
+              ></a>
+              <div class="horizontal">
+                <!-- <div>
                       <ul class="sub-menu-s">
                           <li>
                               <a href="#"><p>By Platform</p><br>
@@ -83,83 +89,89 @@
                           </li>
                       </ul>
                   </div> -->
-            <div>
-              <ul class="sub-menu-s">
-                <li>
-                  <a href=“services.html”
-                    ><p>Marketing Automation</p></a>
-                    <br />
-                    <p class="small-p">CRM Management</p>
-                    <br />
-                    <p class="small-p">Software Integration</p>
-                    <br />
-                    <p class="small-p">Sales Funnel and Pipelines</p>
-                </li>
-              </ul>
+                <div>
+                  <ul class="sub-menu-s">
+                    <li>
+                      <a href="services.html"><p>Marketing Automation</p></a>
+                      <br />
+                      <p class="small-p">CRM Management</p>
+                      <br />
+                      <p class="small-p">Software Integration</p>
+                      <br />
+                      <p class="small-p">Sales Funnel and Pipelines</p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
+            <a href="#wrapper">FAQ</a>
           </div>
+          <a href="#"><div class="cta">Book a Call</div></a>
         </div>
-        <a href="#wrapper">FAQ</a>
       </div>
-      <a href="#"><div class="cta">Book a Call</div></a>
     </div>
+    <!-- hero section  -->
 
     <!-- portfolio section  -->
-
-    <div class="portfolio">
-      <div class="text"><p>Customer Stories</p></div>
-      <h3>What People Say <span>About Us</span></h3>
-      <h5>
-        Discover what our satisfied customers want to say about their experience
-        with our service
-      </h5>
+    <div class="containerWrp">
+      <div class="portfolio">
+        <div class="text"><p>Customer Stories</p></div>
+        <h3>What People Say <span>About Us</span></h3>
+        <h5>
+          Discover what our satisfied customers want to say about their
+          experience with our service
+        </h5>
+      </div>
     </div>
 
     <!-- card section  -->
-    <div class="card">
-      <div>
-        <img src="images/cs-img.png" alt="" />
+    <div class="containerWrp">
+      <div class="card">
+        <div>
+          <img src="images/cs-img.png" alt="" />
+        </div>
+        <div>
+          <img src="images/cs-img.png" alt="" />
+        </div>
       </div>
-      <div>
-        <img src="images/cs-img.png" alt="" />
+      <div class="card">
+        <div>
+          <img src="images/cs-img.png" alt="" />
+        </div>
+        <div>
+          <img src="images/cs-img.png" alt="" />
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <div>
-        <img src="images/cs-img.png" alt="" />
-      </div>
-      <div>
-        <img src="images/cs-img.png" alt="" />
-      </div>
-    </div>
-    <div class="card">
-      <div>
-        <img src="images/cs-img.png" alt="" />
-      </div>
-      <div>
-        <img src="images/cs-img.png" alt="" />
+      <div class="card">
+        <div>
+          <img src="images/cs-img.png" alt="" />
+        </div>
+        <div>
+          <img src="images/cs-img.png" alt="" />
+        </div>
       </div>
     </div>
 
     <!-- video section  -->
+    <div class="containerWrp">
+      <div id="vdo">
+        <h3><span>Video </span>Testimonials</h3>
 
-    <div id="vdo">
-      <h3><span>Video </span>Testimonials</h3>
-
-      <div class="card" id="video">
-        <div>
-          <img src="images/cs-vdo.png" alt="" />
+        <div class="card" id="video">
+          <div>
+            <img src="images/cs-vdo.png" alt="" />
+          </div>
+          <div>
+            <img src="images/cs-vdo.png" alt="" />
+          </div>
         </div>
-        <div>
-          <img src="images/cs-vdo.png" alt="" />
-        </div>
-      </div>
-      <div class="card" id="video">
-        <div>
-          <img src="images/cs-vdo.png" alt="" />
-        </div>
-        <div>
-          <img src="images/cs-vdo.png" alt="" />
+        <div class="card" id="video">
+          <div>
+            <img src="images/cs-vdo.png" alt="" />
+          </div>
+          <div>
+            <img src="images/cs-vdo.png" alt="" />
+          </div>
         </div>
       </div>
     </div>
@@ -167,58 +179,68 @@
     <!-- contact section starts -->
 
     <div class="contact">
-      <h3>Need Our Help to</h3>
-      <span>Grow Your Business?</span>
+      <div class="containerWrp">
+        <h3>Need Our Help to</h3>
+        <span>Grow Your Business?</span>
 
-      <div class="button">
-        <a href="#"
-          ><div class="cta"><p>Book a call</p></div></a
-        >
-        <a href="#"
-          ><div class="cta-s"><p>Get a Demo</p></div></a
-        >
+        <div class="button" style="justify-content: center;align-items: center;">
+          <a href="#"
+            ><div class="cta"><p>Book a call</p></div></a
+          >
+          <a href="#"
+            ><div class="cta-s"><p>Get a Demo</p></div></a
+          >
+        </div>
       </div>
       <div class="bg"><img src="images/background_wave.png" alt="" /></div>
     </div>
 
     <!-- footer section  -->
 
+  
     <footer>
-      <div class="footer">
-        <div class="brand">
-          <div class="logo">
-            <img src="images/logo - Nusanse.svg" alt="" height="32px" width="155px" />
-          </div>
-          <p>From brand creation to revenue generation.</p>
-          <div class="social">
-            <div><i class="fa-brands fa-instagram"></i></div>
-            <div><i class="fa-brands fa-twitter"></i></div>
-            <div><i class="fa-brands fa-linkedin-in"></i></div>
-          </div>
-        </div>
+      <div style="background: #ffcdb0">
+        <div class="containerWrp">
+          <div class="footer">
+            <div class="brand">
+              <div class="logo">
+                <img
+                  src="images/logo - Nusanse.svg"
+                  alt=""
+                  height="32px"
+                  width="155px"
+                />
+              </div>
+              <p>From brand creation to revenue generation.</p>
+              <div class="social">
+                <div><i class="fa-brands fa-instagram"></i></div>
+                <div><i class="fa-brands fa-twitter"></i></div>
+                <div><i class="fa-brands fa-linkedin-in"></i></div>
+              </div>
+            </div>
 
-        <div class="hideMob">
-          <h4 id="foot-h">Why Us?</h4>
-          <p id="foot-p">Why Our Company</p>
-          <a href="obm.html">
-            <p id="foot-p">Our Company vs Online Business Manager</p>
-          </a>
-          <a href="customer.html">
-            <p id="foot-p">Customer Stories</p>
-          </a>
-          <a href="#">
-            <p id="foot-p">Contact Us</p>
-          </a>
-        </div>
-        <div class="hideMob">
-          <h4 id="foot-h">Resources</h4>
-          <p id="foot-p">Book A Call</p>
-          <p id="foot-p">Watch Demo</p>
-          <p id="foot-p">Design Portfolio</p>
-          <a href="platform.html">
-            <p id="foot-p">Supported Platforms</p>
-          </a>
-          <p id="foot-p">Blogs</p>
+            <div id="m">
+              <h4 id="foot-h">Why Us?</h4>
+              <p id="foot-p">Why Our Company</p>
+              <a href="obm.html">
+                <p id="foot-p">Our Company vs <br />Online Business Manager</p>
+              </a>
+              <a href="customer.html">
+                <p id="foot-p">Customer Stories</p>
+              </a>
+            </div>
+            <div id="m">
+              <h4 id="foot-h">Resources</h4>
+              <p id="foot-p">Book A Call</p>
+              <p id="foot-p">Watch Demo</p>
+              <a href="portfolio.html">
+                <p id="foot-p">Portfolio</p>
+              </a>
+              <a href="platform.html">
+                <p id="foot-p">Supported Platforms</p>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -226,15 +248,34 @@
         <p>2024 © My Company. All Rights Reserved.</p>
       </div>
     </footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const hamburgerMenu = document.querySelector(".hamburger-menu");
-        const nav = document.querySelector(".nav");
+      const hamburgerMenu = $(".hamburger-menu");
+      const nav = $(".nav");
 
-        hamburgerMenu.addEventListener("click", function () {
-          nav.classList.toggle("show"); // Toggle the 'show' class on the nav
-        });
+      hamburgerMenu.click(function () {
+        if (!nav.hasClass("show")) {
+          //  slide from right animation with jquery
+          nav.addClass("show");
+          nav.animate(
+            {
+              right: "0",
+              ease: "ease-in",
+            },
+            300
+          );
+        } else {
+          nav.animate(
+            {
+              right: "-100%",
+              ease: "ease-out",
+            },
+            300,
+            function () {
+              nav.removeClass("show");
+            }
+          );
+        }
       });
 
       document.querySelectorAll(".question").forEach((item) => {
