--- a/obm.html
+++ b/obm.html
@@ -288,16 +288,9 @@
         <h3>Need Our Help to</h3>
         <span>Grow Your Business?</span>
 
-        <div
-          class="button"
-          style="justify-content: center; align-items: center"
-        >
-          <a href="#"
-            ><div class="cta"><p>Book a call</p></div></a
-          >
-          <a href="#"
-            ><div class="cta-s"><p>Get a Demo</p></div></a
-          >
+        <div class="button" style="justify-content: center; align-items: center">
+          <a href="#"><div class="cta"><p>Book a call</p></div></a>
+          <a href="#"><div class="cta-s"><p>Get a Demo</p></div></a>
         </div>
       </div>
       <div class="bg"><img src="images/background_wave.png" alt="" /></div>
