--- a/services.html
+++ b/services.html
@@ -297,7 +297,6 @@
       </div>
     </div>
 
-    <div class="hr"></div>
 
     <!-- work section  -->
     <div class="containerWrp">
@@ -388,14 +387,13 @@
       </div>
     </div>
 
-    <div class="hr"></div>
 
     <!-- faq section -->
     <div class="containerWrp">
       <div id="wrapper">
         <div class="text"><p>FAQ</p></div>
         <h3>Have a question? <span>Look here</span></h3>
-        <div class="head">
+        <!-- <div class="head">
           <div>
             <a href="#"><h4 class="head-1">General</h4></a>
           </div>
@@ -405,12 +403,12 @@
           <div class="head-3">
             <a href="#"><h4>Billing</h4></a>
           </div>
-        </div>
-        <div class="line">
+        </div> -->
+        <!-- <div class="line">
           <div class="hr" id="hr-1"></div>
           <div class="hr"></div>
           <div class="hr"></div>
-        </div>
+        </div> -->
         <!-- 1 -->
         <div class="faq">
           <button class="question">
