--- a/index.html
+++ b/index.html
@@ -639,9 +639,9 @@
         <span data-aos="fade-up" data-aos-delay="100">Grow Your Business?</span>
 
         <div class="button" data-aos="fade-up" data-aos-delay="150">
-          <a href="#"
+          <!-- <a href="#"
             ><div class="cta"><p>Book a call</p></div></a
-          >
+          > -->
           <a href="#"
             ><div class="cta-m"><p>Book a call</p></div></a
           >
