--- a/aboutus.html
+++ b/aboutus.html
@@ -114,6 +114,8 @@
               </div>
             </div>
             <a href="#wrapper">FAQ</a>
+            <a href="#" class="mobile-cta">Book a Call</a>
+
           </div>
           <a href="#"><div class="cta">Book a Call</div></a>
         </div>
