--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
               >Home
             </a>
             <div class="about-nav hasSubMenu">
-              <a href="#"
-                >About us &nbsp;<i class="fa-solid fa-chevron-down"></i
-              ></a>
+              <a href="#">About us &nbsp;<i class="fa-solid fa-chevron-down"></i></a>
               <ul class="sub-menu">
                 <li>
                   <a href="portfolio.html"><p>Portfolio</p></a>
@@ -86,9 +84,7 @@
             </div>
 
             <div class="services-nav hasSubMenu">
-              <a href="#"
-                >Services &nbsp;<i class="fa-solid fa-chevron-down"></i
-              ></a>
+              <a href="#">Services &nbsp;<i class="fa-solid fa-chevron-down"></i></a>
               <div class="horizontal">
                 <!-- <div>
                     <ul class="sub-menu-s">
@@ -118,6 +114,7 @@
               </div>
             </div>
             <a href="#wrapper">FAQ</a>
+            <a href="#" class="mobile-cta">Book a Call</a>
           </div>
           <a href="#"><div class="cta">Book a Call</div></a>
         </div>
