--- a/p_inner3.html
+++ b/p_inner3.html
@@ -122,8 +122,8 @@
     <!-- heading section  -->
     <div class="containerWrp">
       <div class="head">
-        <h1>Cartiziee - On-Demand Food Delivery</h1>
-        <img src="images/pi-1.png" alt="" style="border-radius: 16px;"/>
+        <h1>Custom CRM Development</h1>
+        <img src="images/pi-in-3.png" alt="" style="border-radius: 16px;"/>
       </div>
     </div>
     <div style="background: #fffaec">
@@ -136,7 +136,7 @@
             </div> -->
             <div>
               <h5>Category</h5>
-              <h4>E-commerce</h4>
+              <h4>CRM Development</h4>
             </div>
             <!-- <div>
               <h5>Live View</h5>
@@ -144,14 +144,12 @@
             </div> -->
             <div>
               <h5>Timeline</h5>
-              <h4>3 months</h4>
+              <h4>15 Days</h4>
             </div>
             <div>
               <h5>Service we provided</h5>
               <h4>
-                User Research <br />
-                UI Design <br>
-                Development
+                Building CRM
               </h4>
             </div>
           </div>
@@ -162,12 +160,12 @@
             <div><h4>Project Brief</h4></div>
             <div>
               <h5>
-                Cartzie is a user-friendly grocery app designed to simplify your shopping experience. By offering a wide selection of local shops and products, we enhance convenience and support local businesses. Our team embraced the challenge of creating a mobile app that combines functionality, ease of use, and striking aesthetics. We developed a comprehensive design system to ensure consistency throughout the app, prioritizing an intuitive and visually appealing interface.
+                For a long time, our client tried various off-the-shelf products and relied on Excel and Google Sheets, but always found these solutions lacking. Our task was to develop a custom CRM tailored to the client's specific needs.
               </h5>
             </div>
           </div>
 
-          <img src="images/pi-clothes.png" alt="" />
+          <img src="images/pi-3.png" alt="" />
         </div>
       </div>
     </div>
@@ -175,21 +173,22 @@
     <!-- problem and solution section  -->
     <div class="containerWrp">
       <div class="p-brief">
-        <div><h4>Problems and Challenges</h4></div>
+        <div><h4>Achievement</h4></div>
         <div>
           <h5>
-            Our survey revealed several user struggles: long checkout lines, the inconvenience of visiting multiple stores for unavailable products, and missing out on sale updates.
+            The project began with just one back-end developer, a part-time front-end developer, and a project manager. We decided to build a custom CRM from scratch, selecting a powerful framework as the development base. Within a few months, we created the basic functionality and expanded the team to accelerate development. Currently, our team includes two developers, one part-time front-end developer, one QA specialist, and one project manager. This dedicated team has made significant progress, and nearly all 150 employees are now using the new CRM system in less than six months.
+We digitized and optimized the company's business processes by providing user-friendly and flexible interfaces tailored to each employee. We utilized top-notch technologies, including the latest frameworks, secure APIs for integration, and machine learning algorithms for forecasts and predictions.
           </h5>
         </div>
       </div>
-      <div class="p-brief">
+      <!-- <div class="p-brief">
         <div><h4>Solution</h4></div>
         <div>
           <h5>
-            We encountered several design challenges, such as developing effective filters for accurate results, optimizing thumb patterns for ease of use, and ensuring the app is visually appealing while providing detailed information.
+            Transforming complex cybersecurity content into accessible information for non-experts. We designed illustrations, icons, graphs, and animations to ensure the content is easy to understand and meaningful for everyone.
           </h5>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="hr"></div>
