--- a/p_inner4.html
+++ b/p_inner4.html
@@ -122,8 +122,8 @@
     <!-- heading section  -->
     <div class="containerWrp">
       <div class="head">
-        <h1>Cartiziee - On-Demand Food Delivery</h1>
-        <img src="images/pi-1.png" alt="" style="border-radius: 16px;"/>
+        <h1>Custom Sales Funnel Design For a Coffee Shop Company.</h1>
+        <img src="images/pi-in-4.png" alt="" style="border-radius: 16px;"/>
       </div>
     </div>
     <div style="background: #fffaec">
@@ -136,7 +136,7 @@
             </div> -->
             <div>
               <h5>Category</h5>
-              <h4>E-commerce</h4>
+              <h4>Sales Funnel Development</h4>
             </div>
             <!-- <div>
               <h5>Live View</h5>
@@ -144,13 +144,12 @@
             </div> -->
             <div>
               <h5>Timeline</h5>
-              <h4>3 months</h4>
+              <h4>10 Days</h4>
             </div>
             <div>
               <h5>Service we provided</h5>
               <h4>
-                User Research <br />
-                UI Design <br>
+                Funnel Design <br />
                 Development
               </h4>
             </div>
@@ -162,12 +161,12 @@
             <div><h4>Project Brief</h4></div>
             <div>
               <h5>
-                Cartzie is a user-friendly grocery app designed to simplify your shopping experience. By offering a wide selection of local shops and products, we enhance convenience and support local businesses. Our team embraced the challenge of creating a mobile app that combines functionality, ease of use, and striking aesthetics. We developed a comprehensive design system to ensure consistency throughout the app, prioritizing an intuitive and visually appealing interface.
+                For a long time, our client, a coffee shop company, experimented with various pre-made landing page templates and relied on basic website builders, but consistently found these solutions inadequate. Our task was to design and develop a custom sales funnel landing page tailored to the unique needs and branding of the coffee shop.
               </h5>
             </div>
           </div>
 
-          <img src="images/pi-clothes.png" alt="" />
+          <img src="images/pi-4.png" alt="" />
         </div>
       </div>
     </div>
@@ -175,21 +174,22 @@
     <!-- problem and solution section  -->
     <div class="containerWrp">
       <div class="p-brief">
-        <div><h4>Problems and Challenges</h4></div>
+        <div><h4>Achievement</h4></div>
         <div>
           <h5>
-            Our survey revealed several user struggles: long checkout lines, the inconvenience of visiting multiple stores for unavailable products, and missing out on sale updates.
+            The project began with just one full-stack developer, a part-time UX/UI designer, and a project manager. We set out to design and develop a custom sales funnel landing page from the ground up, selecting a robust platform as the foundation. Within a few months, we established the core features and expanded the team to speed up the process. Currently, our team includes two full-stack developers, one part-time UX/UI designer, one QA specialist, and one project manager. This dedicated team has achieved remarkable progress, with the new landing page live and driving conversions within six months.
+We transformed and enhanced the coffee shop's digital marketing strategy by creating an engaging and intuitive landing page tailored to attract and retain customers. We utilized cutting-edge technologies, including modern web development frameworks, secure APIs for seamless integration with existing systems, and data analytics tools to optimize the sales funnel and improve customer engagement.
           </h5>
         </div>
       </div>
-      <div class="p-brief">
+      <!-- <div class="p-brief">
         <div><h4>Solution</h4></div>
         <div>
           <h5>
-            We encountered several design challenges, such as developing effective filters for accurate results, optimizing thumb patterns for ease of use, and ensuring the app is visually appealing while providing detailed information.
+            Transforming complex cybersecurity content into accessible information for non-experts. We designed illustrations, icons, graphs, and animations to ensure the content is easy to understand and meaningful for everyone.
           </h5>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="hr"></div>
