--- a/p_inner6.html
+++ b/p_inner6.html
@@ -122,8 +122,8 @@
     <!-- heading section  -->
     <div class="containerWrp">
       <div class="head">
-        <h1>Cartiziee - On-Demand Food Delivery</h1>
-        <img src="images/pi-1.png" alt="" style="border-radius: 16px;"/>
+        <h1>Agency Branding & Website UI/UX Design</h1>
+        <img src="images/pi-in-6.png" alt="" style="border-radius: 16px;"/>
       </div>
     </div>
     <div style="background: #fffaec">
@@ -136,7 +136,7 @@
             </div> -->
             <div>
               <h5>Category</h5>
-              <h4>E-commerce</h4>
+              <h4>Website Design and Development</h4>
             </div>
             <!-- <div>
               <h5>Live View</h5>
@@ -144,14 +144,14 @@
             </div> -->
             <div>
               <h5>Timeline</h5>
-              <h4>3 months</h4>
+              <h4>50 Days</h4>
             </div>
             <div>
               <h5>Service we provided</h5>
               <h4>
-                User Research <br />
-                UI Design <br>
-                Development
+                UI/UX Design <br />
+                Development <br>
+                Branding
               </h4>
             </div>
           </div>
@@ -162,12 +162,12 @@
             <div><h4>Project Brief</h4></div>
             <div>
               <h5>
-                Cartzie is a user-friendly grocery app designed to simplify your shopping experience. By offering a wide selection of local shops and products, we enhance convenience and support local businesses. Our team embraced the challenge of creating a mobile app that combines functionality, ease of use, and striking aesthetics. We developed a comprehensive design system to ensure consistency throughout the app, prioritizing an intuitive and visually appealing interface.
+                Visionary Vortex specializes in creative direction, content development, and paid media for both B2B and B2C clients. Unlike companies that primarily focus on web design, our services encompass a broader range of creative visual content, including video production, commercials, social media ads, and graphics. Our rebranding will incorporate these visual elements to effectively showcase the diverse and dynamic work we produce.tform as the foundation and established the core features within a few months. As the project progressed, we expanded the team to include two full-stack developers, one part-time UX/UI designer, one QA specialist, and one project manager. This dedicated team achieved remarkable progress, with the app now live and receiving positive feedback within six months.
               </h5>
             </div>
           </div>
 
-          <img src="images/pi-clothes.png" alt="" />
+          <img src="images/pi-6.png" alt="" />
         </div>
       </div>
     </div>
@@ -175,21 +175,21 @@
     <!-- problem and solution section  -->
     <div class="containerWrp">
       <div class="p-brief">
-        <div><h4>Problems and Challenges</h4></div>
+        <div><h4>Achievement</h4></div>
         <div>
           <h5>
-            Our survey revealed several user struggles: long checkout lines, the inconvenience of visiting multiple stores for unavailable products, and missing out on sale updates.
+            We elevated the agency's online presence by creating an engaging and user-friendly website that effectively showcases their services and portfolio. The branding was carefully crafted to reflect the agency's identity and appeal to their target audience. We utilized advanced web development frameworks, secure APIs for seamless integration with their existing systems, and responsive design techniques to ensure an optimal user experience across all devices. The result is a visually stunning and highly functional website that enhances the agency's digital strategy and attracts new clients.
           </h5>
         </div>
       </div>
-      <div class="p-brief">
+      <!-- <div class="p-brief">
         <div><h4>Solution</h4></div>
         <div>
           <h5>
-            We encountered several design challenges, such as developing effective filters for accurate results, optimizing thumb patterns for ease of use, and ensuring the app is visually appealing while providing detailed information.
+            Transforming complex cybersecurity content into accessible information for non-experts. We designed illustrations, icons, graphs, and animations to ensure the content is easy to understand and meaningful for everyone.
           </h5>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="hr"></div>
