--- a/portfolio.html
+++ b/portfolio.html
@@ -131,7 +131,7 @@
         <div class="click filter">
           <button  data-filter="all"><p>All items</p></button>
           <button data-filter=".category-lead">
-            <p>Lead Generation and Management</p>
+            <p>App/ Website Design & Development</p>
           </button>
           <button data-filter=".category-automation">
             <p>Marketing Automation</p>
@@ -163,7 +163,7 @@
             </a>
           </div>
           <div class="mixItem category-lead">
-            <a href="p_inner.html">
+            <a href="p_inner2.html">
               <img src="images/port-2.png" alt="" />
               <div class="desc">
                 <div>
@@ -183,11 +183,11 @@
           </div>
 
           <div class="mixItem category-crm">
-            <a href="p_inner.html">
+            <a href="p_inner3.html">
               <img src="images/port-3.png" alt="" />
               <div class="desc">
                 <div>
-                  <h5>Coinflo - Cryptocurrency</h5>
+                  <h5>Custom CRM Development</h5>
                   <p>Branding, Copywriting, Hosting and Support</p>
                 </div>
                 <div class="arrow">
@@ -202,12 +202,12 @@
             </a>
           </div>
           <div class="mixItem category-lead">
-            <a href="p_inner.html">
+            <a href="p_inner4.html">
               <img src="images/port-4.png" alt="" />
               <div class="desc">
                 <div>
-                  <h5>Coinflo - Cryptocurrency</h5>
-                  <p>Branding, Copywriting, Hosting and Support</p>
+                  <h5>Sales Funnel Design and Dev</h5>
+                  <p>Custom landing page, Funnel Design and Development</p>
                 </div>
                 <div class="arrow">
                   <img
@@ -222,12 +222,12 @@
           </div>
 
           <div class="mixItem category-automation">
-            <a href="p_inner.html">
+            <a href="p_inner5.html">
               <img src="images/port-5.png" alt="" />
               <div class="desc">
                 <div>
-                  <h5>Coinflo - Cryptocurrency</h5>
-                  <p>Branding, Copywriting, Hosting and Support</p>
+                  <h5>FinTech App Design and Development</h5>
+                  <p>UI/UX Design, App Development, Branding</p>
                 </div>
                 <div class="arrow">
                   <img
@@ -241,12 +241,12 @@
             </a>
           </div>
           <div class="mixItem category-automation">
-            <a href="p_inner.html">
+            <a href="p_inner6.html">
               <img src="images/port-6.png" alt="" />
               <div class="desc">
                 <div>
-                  <h5>Coinflo - Cryptocurrency</h5>
-                  <p>Branding, Copywriting, Hosting and Support</p>
+                  <h5>Website Design and Development</h5>
+                  <p>UI/UX Design, Website Development, Branding</p>
                 </div>
                 <div class="arrow">
                   <img
@@ -260,7 +260,7 @@
             </a>
           </div>
 
-          <div class="mixItem category-crm">
+          <!-- <div class="mixItem category-crm">
             <a href="p_inner.html">
               <img src="images/port-7.png" alt="" />
               <div class="desc">
@@ -297,7 +297,7 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
