--- a/aboutus.html
+++ b/aboutus.html
@@ -151,7 +151,7 @@
         <div class="container">
           <div>
             <h5>
-              Carl Taylor had a vision of building a business that allowed him
+              Abdullah had a vision of building a business that allowed him
               freedom to enjoy the things life has to offer. His path to
               realizing this dream was unique as he explored many avenues - from
               IT to life and business coaching to selling courses and marketing.
@@ -182,10 +182,7 @@
             maintaining robust partnerships through our collaborative approach.
             <br />
             <br />
-            We are proud to help businesses grow and succeed in different
-            industries. From startups to established enterprises, our tailored
-            solutions have helped them conquer challenges, reach milestones, and
-            actualize their visions.
+            From startups to established enterprises, we are proud to help businesses grow and succeed in various industries. Our tailored solutions have helped them conquer challenges, reach milestones, and actualize their visions.
           </h5>
         </div>
         <div>
