--- a/p_inner2.html
+++ b/p_inner2.html
@@ -122,8 +122,8 @@
     <!-- heading section  -->
     <div class="containerWrp">
       <div class="head">
-        <h1>Cartiziee - On-Demand Food Delivery</h1>
-        <img src="images/pi-1.png" alt="" style="border-radius: 16px;"/>
+        <h1>Panther - Website Design for SIEM Platform</h1>
+        <img src="images/pi-in-2.png" alt="" style="border-radius: 16px;"/>
       </div>
     </div>
     <div style="background: #fffaec">
@@ -136,7 +136,7 @@
             </div> -->
             <div>
               <h5>Category</h5>
-              <h4>E-commerce</h4>
+              <h4>Cyber Security</h4>
             </div>
             <!-- <div>
               <h5>Live View</h5>
@@ -162,12 +162,14 @@
             <div><h4>Project Brief</h4></div>
             <div>
               <h5>
-                Cartzie is a user-friendly grocery app designed to simplify your shopping experience. By offering a wide selection of local shops and products, we enhance convenience and support local businesses. Our team embraced the challenge of creating a mobile app that combines functionality, ease of use, and striking aesthetics. We developed a comprehensive design system to ensure consistency throughout the app, prioritizing an intuitive and visually appealing interface.
+                Panther is a leading cybersecurity firm specializing in real-time threat detection, rapid incident response, and comprehensive investigations.
+                Our team was tasked with rebranding, designing a new website, and developing a content management system for Panther.
+                The successful completion of this project not only enhanced Panther's reputation in the cybersecurity industry but also played a pivotal role in securing three rounds of funding.              
               </h5>
             </div>
           </div>
 
-          <img src="images/pi-clothes.png" alt="" />
+          <img src="images/pi-2.png" alt="" />
         </div>
       </div>
     </div>
@@ -178,7 +180,7 @@
         <div><h4>Problems and Challenges</h4></div>
         <div>
           <h5>
-            Our survey revealed several user struggles: long checkout lines, the inconvenience of visiting multiple stores for unavailable products, and missing out on sale updates.
+            Through UX research, we identified key user struggles: complicated security data, frequent false alerts, and high maintenance costs. We empathized with these pain points and addressed them in our solution.
           </h5>
         </div>
       </div>
@@ -186,7 +188,7 @@
         <div><h4>Solution</h4></div>
         <div>
           <h5>
-            We encountered several design challenges, such as developing effective filters for accurate results, optimizing thumb patterns for ease of use, and ensuring the app is visually appealing while providing detailed information.
+            Transforming complex cybersecurity content into accessible information for non-experts. We designed illustrations, icons, graphs, and animations to ensure the content is easy to understand and meaningful for everyone.
           </h5>
         </div>
       </div>
