--- a/index.html
+++ b/index.html
@@ -457,19 +457,87 @@
             experience with our service
           </h4>
         </div>
-        <div
-          data-aos="fade-up"
-          data-aos-delay="200"
-          class="card testimonialSlider"
-        >
-          <div class="slideInner"><img src="images/testi.png" alt="" /></div>
-          <div class="slideInner"><img src="images/testi.png" alt="" /></div>
-          <div class="slideInner"><img src="images/testi.png" alt="" /></div>
-          <div class="slideInner"><img src="images/testi.png" alt="" /></div>
-          <div class="slideInner"><img src="images/testi.png" alt="" /></div>
-          <div class="slideInner"><img src="images/testi.png" alt="" /></div>
-          <div class="slideInner"><img src="images/testi.png" alt="" /></div>
-          <div class="slideInner"><img src="images/testi.png" alt="" /></div>
+        <div data-aos="fade-up" data-aos-delay="200" class="card testimonialSlider">
+          <div class="slideInner">
+            <div class="review">
+              <h5>Sarah</h5>
+              <p>Marketing Consultant</p>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+              <p>Nusance has been instrumental in boosting our digital presence. Their expertise in digital marketing and smooth communication made our collaboration seamless.</p>
+            </div>
+          </div>
+          <div class="slideInner">
+            <div class="review">
+              <h5>Michael</h5>
+              <p>Small Business Owner</p>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+              <p>Choosing Nusance was a wise decision for our online strategy. They delivered results swiftly and kept us informed every step of the way.</p>
+            </div>
+          </div>
+          <div class="slideInner">
+            <div class="review">
+              <h5>Emily</h5>
+              <p>Entrepreneur</p>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+              <p>Impressed with Nusance's innovative solutions and proactive approach. They helped scale my startup effectively.</p>
+            </div>
+          </div>
+          <div class="slideInner">
+            <div class="review">
+              <h5>David</h5>
+              <p>E-commerce Manager</p>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+              <p>Nusance optimized our e-commerce platform remarkably well. Their clear communication and technical prowess are commendable.</p>
+            </div>
+          </div>
+          <div class="slideInner">
+            <div class="review">
+              <h5>Jessica</h5>
+              <p>Freelance Designer</p>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+              <p>Working with Nusance was a breeze. They understood my design needs and translated them into a user-friendly website.</p>
+            </div>
+          </div>
+          <div class="slideInner">
+            <div class="review">
+              <h5>Andrew</h5>
+              <p>Real Estate Agent</p>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+              <p>Nusance revolutionized our digital marketing strategy. Their prompt communication and strategic insights were invaluable.</p>
+            </div>
+          </div>
+          <div class="slideInner">
+            <div class="review">
+              <h5>Olivia</h5>
+              <p>Startup Founder</p>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+              <p>Nusance played a crucial role in our startup's growth. Their commitment to results and effective communication set them apart.</p>
+            </div>
+          </div>
+          <div class="slideInner">
+            <div class="review">
+              <h5>Ryan</h5>
+              <p>Digital Marketer</p>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+              <p>Nusance's expertise in digital marketing is top-notch. They provided clear communication and delivered impressive results.</p>
+            </div>
+          </div>
+          <div class="slideInner">
+            <div class="review">
+              <h5>Sophia</h5>
+              <p>Event Planner</p>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+              <p>Nusance's attention to detail and proactive communication made our event marketing a success.</p>
+            </div>
+          </div>
+          <div class="slideInner">
+            <div class="review">
+              <h5>Daniel</h5>
+              <p>Consultant</p>
+              <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+              <p>I rely on Nusance for their strategic advice and effective communication. They're a trusted partner in my consulting projects.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
