--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!-- stylesheet  -->
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="navbar.css">
+    
   </head>
-  <body>
+  <body<link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="navbar.css">>
     <!-- navbar  -->
     <div style="background-color: #fffaec">
       <div class="containerWrp">
